--- a/intearctive-mode-template/pages/cw_template1.html
+++ b/intearctive-mode-template/pages/cw_template1.html
@@ -83,22 +83,22 @@
 
     // Flash Sale Banner
     setInterval(function () {
-      var today = new Date();
-      var time = today.getHours().toString().padStart(2, '0') + ":" + today.getMinutes().toString().padStart(2, '0');
-      if ((time >= "11:15" && time < "12:00") || (time >= "14:15" && time < "15:00") || (time >= "18:00" && time < "18:45")) {
-        if ($('#header').find($('#flash-header')).length == 0) {
-          $('#header').css("height", "200px")
-          $('#header').append(`
-        <div id="flash-header" style="position: absolute; width: 100%; height: 220px; background-color:black;">
-        <video width="100%" height="100%" autoplay muted loop>
-          <source src="../media/L2_C&W/Flash sale Banner/35_Flash Sale_200.mp4" type="video/mp4">
-        </video>
-      </div>`)
-        }
-      } else {
-        $('#header').css("height", "220px")
-        $('#flash-header').remove()
-      }
+      // var today = new Date();
+      // var time = today.getHours().toString().padStart(2, '0') + ":" + today.getMinutes().toString().padStart(2, '0');
+      // if ((time >= "11:15" && time < "12:00") || (time >= "14:15" && time < "15:00") || (time >= "18:00" && time < "18:45")) {
+      //   if ($('#header').find($('#flash-header')).length == 0) {
+      //     $('#header').css("height", "200px")
+      //     $('#header').append(`
+      //   <div id="flash-header" style="position: absolute; width: 100%; height: 220px; background-color:black;">
+      //   <video width="100%" height="100%" autoplay muted loop>
+      //     <source src="../media/L2_C&W/Flash sale Banner/35_Flash Sale_200.mp4" type="video/mp4">
+      //   </video>
+      // </div>`)
+      //   }
+      // } else {
+      $('#header').css("height", "220px")
+      $('#flash-header').remove()
+      // }
     }, 1000);
 
     $(`#btn-product-list`).click(() => {
